<resources>
  <string name="app_name">Zetta</string>
  <string name="Settings">Settings</string>
  <string name="API_History">API History</string>

  <string name="key_api_url_with_history"
    translatable="false">pref_api_url</string>
  <string name="key_app_version"
    translatable="false">pref_app_version</string>
  <string name="key_mock_responses"
    translatable="false">pref_mock_responses</string>

  <string name="Build_Version">Build Version</string>
  <string name="Support">Support</string>
  <string name="Zetta_Discuss">Zetta Discuss</string>
  <string name="Software_Licenses">Software Licenses</string>
  <string name="Head_nod_to_the_open_source_libraries">Head nod to the open source libraries we have used</string>
  <string name="waiting_for_devices_to_connect_to_x">waiting for devices to connect to %1$s</string>
  <string name="no_server_url_has_been_set">no server url has been set</string>
  <string name="open_source_licenses">Software Licenses</string>
  <string name="library_author">© %1$s</string>
  <string name="Events">Events</string>
  <string name="querying_device">querying device</string>
</resources>
