<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <com.zetta.android.settings.EditTextWithHistoryPreference
    android:key="@string/key_api_url_with_history"
    android:title="API" />

  <android.support.v7.preference.PreferenceScreen
    android:key="@string/key_app_version"
    android:title="@string/Build_Version" />

  <SwitchPreferenceCompat
    android:key="@string/key_mock_responses"
    android:summary="Demo devices without an API (mock responses)"
    android:title="Demo Mode" />

  <android.support.v7.preference.Preference
    android:summary="@string/Zetta_Discuss"
    android:title="@string/Support">

    <intent
      android:action="android.intent.action.VIEW"
      android:data="https://groups.google.com/forum/#!forum/zetta-discuss" />

  </android.support.v7.preference.Preference>

  <android.support.v7.preference.Preference
    android:summary="@string/Head_nod_to_the_open_source_libraries"
    android:title="@string/Software_Licenses">

    <intent android:action="com.zetta.OPEN_SOURCE_LICENSES" />

  </android.support.v7.preference.Preference>

</android.support.v7.preference.PreferenceScreen>
